--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                     <p class="time">10:54pm</p>
                     <p class="date">27/04/2017</p>
                 </div><i class="fa fa-power-off fa-2x shutdown info-icon"></i></div>
+            [![Netlify Status](https://api.netlify.com/api/v1/badges/4e9059e6-c315-4438-9e7b-e1b5c40b08c7/deploy-status)](https://app.netlify.com/sites/vocal-naiad-bfec13/deploys)
 <script type="module">const user = await getUserInfo() </script>
         </div>
     </main>
